[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/turret_enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/static_cannon_base.png" type="Texture" id=2]
[ext_resource path="res://sprites/static_cannon_top.png" type="Texture" id=3]
[ext_resource path="res://sprites/explosion-Sheet.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.368

[sub_resource type="Animation" id=2]
resource_name = "event"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("cannon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "event"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("explosion_sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosion_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="turret_enemy" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="cannon" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 3 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( 34, 0 )

[node name="shoot_anim" type="AnimationPlayer" parent="."]
anims/event = SubResource( 2 )

[node name="timer_shoot" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/event = SubResource( 3 )

[node name="explosion_sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 3
frame = 2

[connection signal="timeout" from="timer_shoot" to="." method="_on_timer_shoot_timeout"]
